PZS-NG CHANGELOG
----------------

v1.1.0 --> 1.1.xx :

v1.0.10 --> 1.1.0 :
		- fixed a typo with complete_bar and chmod_completebar (tnx losty)
		- new dZSbot.conf option: ftpd_type. this should be set to "other" if you're
		  running something other than glftpd.
		- added improvements to !incompletes showing percent missing.
		- added feature to ng_free for using mountpoint along with device.
		- don't use the '$' cookie in the zipscript statusbars (fixed a segfault in
		  in case you do - thanx sked for the report)
		- fixed a bug with chmod_completebar.
		- added option for two sets of generic incomplete indicators.
		- compat-fix in the create_sfv routine - BSD extension was not supported on
		  all distros.
		- fix a bug with sample checks and exemption dirs.
		- default statdefault value changed to something valid. (note: statdefault is
		  index, not name, of section).
		- no longer says N/Ams if you disable ping-check of BNCs.
		- rescan of an mp3 release in a audio_nosort_dir should no longer result in a symlink.
		- IRC groupstats triggers changed for consistency (!gp*), see
		  http://bugs.pzs-ng.com/view.php?id=448 for details.
		- You can now have multiple completebars. In config, separate them by newline.
		- Privchannel invites now work correctly for users with multiple groups.
		- new option by request: show_users_in_group_dirs - option to not hide usernames.
                - pzs-ng should now work fine under wzdftpd and cuftpd. Use the following to configure:
                  ./configure --with-install-path=/path/to/install --disable-glftpd-specific

v1.0.9  --> 1.0.10 : (r2339)
		- psxc-imdb v2.8.
		- added option combine_path to allow clients that does not cwd into reldir.
		- fixed a bug with userstats over 2TB.
		- added support for (xvid) yv12 codec.
		- fixed a bug where .message showed full path to releasedir in stats.
		- fixed a bug in the subdir detection routine.
		- never search for sfv in a sample dir.